<resources>
    <string name="app_name">Pixeldraw</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="settings_title">基本设置</string>
    <string name="settings_zoom">控件缩放比例</string>
    <string name="settings_font_size">页面文本大小</string>
    <string name="settings_value">值$s</string>

    <string name="dialog_enable_confirm">确定</string>
    <string name="dialog_new_file_wide">长度</string>
    <string name="dialog_new_file_height">高度</string>
    <string name="dialog_enable_cancel">取消</string>
    <string name="pop_setting">设置</string>
    <string name="pop_files">文件夹</string>
    <string name="pop_create">创建</string>
    <string name="pop_more">更多</string>
    <string name="popwin_select">选择</string>
    <string name="popwin_color">选择颜色</string>
    <string name="app_cancel">取消</string>
    <string name="about">关于</string>
    <string name="choose_back">回退</string>
    <string name="choose_path">Path</string>
    <string name="save_name">文件名（无需拓展名）</string>
    <string name="save_confirm">保存</string>

    <string name="about_subtitle">一款现代化的我的世界像素图标设计软件</string>
    <string name="copyright">此软件基于AGPL-3.0协议开源与Github，使用、复制、修改、发布此软件及其副本请遵循此协定。</string>
    <string name="about_more">了解更多</string>
    <string name="about_version">Version 0.0.1</string>

    <string name="title_activity_settings">首选项</string>
    <string name="messages_header">通用</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">画布颜色</string>
    <string name="reply_title">170,170,170</string>
    <string name="reply_hint">颜色数码使用rgb格式，用英文逗号分开</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>