<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/about_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_title">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="32sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_divider" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/about_subtitle"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/about_version"
            android:textAlignment="center"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_divider" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/copyright"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/about_more" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>