<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/win_linearlayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_marginBottom="6dp"
        android:adjustViewBounds="false"
        android:background="@drawable/shape_sel"
        android:contentDescription="@string/pop_setting"
        android:cropToPadding="false"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingTop="3dp"
        android:paddingEnd="3dp"
        android:paddingBottom="3dp"
        android:scaleType="fitCenter"
        android:src="@drawable/setting"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginBottom="6dp"
        android:adjustViewBounds="false"
        android:background="@drawable/shape_sel"
        android:contentDescription="@string/pop_files"
        android:cropToPadding="false"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingEnd="6dp"
        android:paddingBottom="6dp"
        android:scaleType="fitCenter"
        android:src="@drawable/archive_director"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginBottom="6dp"
        android:adjustViewBounds="false"
        android:background="@drawable/shape_sel"
        android:contentDescription="@string/pop_create"
        android:cropToPadding="false"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingEnd="6dp"
        android:paddingBottom="6dp"
        android:scaleType="fitCenter"
        android:src="@drawable/draw_edit_new_pen_write"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:background="@drawable/shape_sel"
        android:contentDescription="@string/pop_more"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingEnd="6dp"
        android:paddingBottom="6dp"
        android:scaleType="fitCenter"
        android:src="@drawable/more"
        tools:ignore="TouchTargetSizeCheck" />
</LinearLayout>